--- a/notebooks/admin.ipynb
+++ b/notebooks/admin.ipynb
@@ -24,14 +24,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['temperature-readings', 'humidity-readings']\n"
+      "['temperature-readings']\n"
      ]
     }
    ],
