--- a/notebooks/consumer.ipynb
+++ b/notebooks/consumer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,27 +24,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mundra:31C\n",
-      "mundra:31C\n",
-      "mundra:31C\n",
-      "delhi:51C\n",
       "mumbai:25C\n",
       "mumbai:25C\n",
-      "mumbai:25C\n"
+      "delhi:30C\n",
+      "mundra:35C\n"
      ]
     }
    ],
    "source": [
     "# Consume messages\n",
-    "for message in consumer:\n",
-    "    print(f\"{message.key}:{message.value}\")\n",
+    "try:\n",
+    "    for message in consumer:\n",
+    "        print(f\"{message.key}:{message.value}\")\n",
+    "except KeyboardInterrupt:\n",
+    "    pass\n",
     "\n",
     "consumer.close()"
    ]
