--- a/notebooks/producer.ipynb
+++ b/notebooks/producer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,18 +21,31 @@
     "        producer.send(topic, key=key, value=value)\n",
     "    else:\n",
     "        producer.send(topic, value=value)\n",
-    "    producer.flush()"
+    "    producer.flush()\n",
+    "    print(f\"Sent message to topic {topic}: {value}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sent message to topic temperature-readings: 25C\n",
+      "Sent message to topic temperature-readings: 30C\n",
+      "Sent message to topic temperature-readings: 35C\n"
+     ]
+    }
+   ],
    "source": [
     "# Example usage\n",
     "topic = 'temperature-readings'\n",
-    "send_message(topic, key='mumbai', value='25C')"
+    "send_message(topic, key='mumbai', value='25C')\n",
+    "send_message(topic, key='delhi', value='30C')\n",
+    "send_message(topic, key='mundra', value='35C')"
    ]
   }
  ],
